--- a/src/styles/stylus/header.styl
+++ b/src/styles/stylus/header.styl
@@ -1,10 +1,11 @@
+$clr-brown = #211c1c
 
 .link {
   font-size: 15px;
   padding: 10px 30px;
   font-weight: 500;
   border-radius: 50px;
-  color: #211c1c;
+  color: $clr-brown;
   transition: background-color 0.2s;
 
   &:hover {
